# ecological-inference-elections

./: .gitignore  404.html  Comparison.ipynb  DESCRIPTION  EM_algorithm.py  EM_full.py  EM_mult.py  EM_mvn_cdf.py  EM_mvn_pdf.py  EM_simulate.py  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  Makefile  NAMESPACE  README.md  authors.html  group_opt.py  helper_functions.py  index.html  instance_maker.py  main.R  main.cpp  p_val_mult.py  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check-macos.yaml  R-CMD-check-ubuntu.yaml  R-CMD-check-windows.yaml  documentation.yaml  testthat.yaml
R/: RcppExports.R  data-utils.R  data.R  eim-S3.R  eim-class.R  fastei-package.R  instancer.R  internal.R  main.R
anRpackage/: .Rbuildignore  .Rhistory  .lintr  .r-lsp-config.json  DESCRIPTION  NAMESPACE  anRpackage.Rproj  compile_commands.json  matTest.sh  packageMaker.sh
articles/: accuracy.html  covariates.html  demonstration.html  demonstration2.html  index.html  parametric.html
cleaned/: EM_algorithm.py
data/: chile_election_2021.rda
doc/: accuracy.R  accuracy.Rmd  accuracy.html  demonstration.R  demonstration.Rmd  demonstration.html
eimodel/: .Rbuildignore  .Rhistory  DESCRIPTION  NAMESPACE  bootstrap.c  compile_commands.json
infPackage2-prev/: .Rhistory  NAMESPACE
man/: PCA.Rd  bootstrap.Rd  chile_election_2021.Rd  eim.Rd  fastei-package.Rd  get_XW_chile.Rd  get_agg_opt.Rd  get_agg_proxy.Rd  get_eim_chile.Rd  plot.eim.Rd  run_em.Rd  save_eim.Rd  simulate_election.Rd  waldtest.Rd  welchtest.Rd
project/: NAMESPACE
reference/: PCA.html  bootstrap().html  bootstrap.html  chile_election_2021.html  eim().html  eim.html  fastei-package.html  fastei.html  get_XW_chile().html  get_XW_chile.html  get_agg_opt.html  get_agg_proxy.html  get_eim_chile().html  get_eim_chile.html  index.html  model_results.json  model_results.rds  plot.eim.html  run_em().html  run_em.html  save_eim().html  save_eim.html  simulate_election.html  waldtest.html  welchtest.html
src/: .clangd  CMakeLists.txt  LP.c  LP.h  MCMC.c  MCMC.h  Makefile  Makevars  R_interface.c  RcppExports.cpp  analyzeResults.py  bootstrap.c  bootstrap.h  compile_commands.json  configure.ac  dynamic_program.c  dynamic_program.h  exact.c  globals.h  hitAndRun.c  hitAndRun.h  main.c  main.h  matrixUtils.c  matrixUtils.h  metropolis.c  metropolis.h  multinomial.c  multinomial.h  multivariate-cdf.c  multivariate-cdf.h  multivariate-pdf.c  multivariate-pdf.h  paperResults.json  parametric_main.c  parametric_main.h  utils_hash.c  utils_hash.h  utils_matrix.c  utils_matrix.h  (+3 more)
src/.cache/clangd/index/: RcppExports.cpp.57B5440E446F493A.idx  bootstrap.c.5A5EAA7A07BBBDA5.idx  bootstrap.h.C142580B0A97840F.idx  dynamic_program.c.EC9D608A20BDC363.idx  dynamic_program.h.0C70ED6481C2684C.idx  exact.c.FC788D47C3A58F15.idx  exact.h.6A42D97911F9AB42.idx  globals.h.DA26DBFC99697097.idx  hitAndRun.c.B307691CC0D65CDF.idx  hitAndRun.h.9A2E1E20AC777E5C.idx  main.c.DA02E2A591C4BB3A.idx  main.h.525FDF644932C479.idx  matrixUtils.c.82BCD8D07D032DC9.idx  matrixUtils.h.B45EA3AF1CE5B45E.idx  multinomial.c.BE82778FBD1BA7EB.idx  multinomial.h.E06E3680617ED09B.idx  multivariate-cdf.c.9EF955D30457DAAF.idx  multivariate-pdf.c.1AF3992FF726A3DD.idx  multivariate-pdf.h.A0A6A5D0EE94A185.idx  utils_hash.c.ED91F09E6A64978B.idx  utils_hash.h.B758F99F00D050AA.idx  utils_matrix.c.AF098B49BD724834.idx  utils_matrix.h.F834171AC4693B26.idx  utils_multivariate.c.9EB16C5398D453BA.idx  utils_multivariate.h.54B0395C05FAB1BD.idx  wrapper.cpp.06552506E6133A18.idx  wrapper.h.E9FE4ED95FB0A046.idx
src/means/Exact/: G2C2.json
src/means/Hit and Run/1000_samples/: G2C10.json  G2C2.json  G2C3.json  G2C4.json  G2C5.json  G3C10.json  G3C2.json  G3C3.json  G3C4.json  G3C5.json  G4C10.json  G4C2.json  G4C3.json  G4C4.json  G4C5.json
src/means/MVN CDF/: G2C10.json  G2C2.json  G2C3.json  G2C4.json  G2C5.json  G3C10.json  G3C2.json  G3C3.json  G3C4.json  G3C5.json  G4C10.json  G4C2.json  G4C3.json  G4C4.json  G4C5.json
src/means/MVN PDF/: G2C10.json  G2C2.json  G2C3.json  G2C4.json  G2C5.json  G3C10.json  G3C2.json  G3C3.json  G3C4.json  G3C5.json  G4C10.json  G4C2.json  G4C3.json  G4C4.json  G4C5.json
src/means/Multinomial/: G2C10.json  G2C2.json  G2C3.json  G2C4.json  G2C5.json  G3C10.json  G3C2.json  G3C3.json  G3C4.json  G3C5.json  G4C10.json  G4C2.json  G4C3.json  G4C4.json  G4C5.json
src/means2/Exact/: G2C2.json
src/means2/MVN PDF/: G2C10.json  G2C2.json  G2C3.json  G2C4.json  G2C5.json  G3C10.json  G3C2.json  G3C3.json  G3C4.json  G3C5.json  G4C10.json  G4C2.json  G4C3.json  G4C4.json  G4C5.json
src/means3/Exact/: G2C2.json
src/parallel/MVN CDF/: G3C3.json
src/utils/: combinations.c  fileutils.c  instanceGenerator.c  matrixUtils.c  matrixUtils.h  memoizationUtil.c  memoizationUtil.h  multivariateUtils.c
vignettes/: DESCRIPTION  LICENSE.md  accuracy.Rmd  compile_commands.json  covariates.Rmd  covariates.html  demonstration.Rmd  demonstration.html  demonstration2.Rmd  events.json  parametric.Rmd  parametric.html
(+756 files in other folders)
